# Pipeline

./: AnyNode.cpp  AnyNode.h  ApiNode.cpp  ApiNode.h  Attribute.h  AttributeSet.cpp  AttributeSet.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ConditionNode.cpp  ConditionNode.h  ContextManager.cpp  ContextManager.h  Edge.cpp  Edge.h  Enums.cpp  Enums.h  FileManager.cpp  FileManager.h  Graph.cpp  Graph.h  GraphManager.cpp  GraphManager.h  GraphNode.cpp  GraphNode.h  Idable.h  Main.cpp  MessageNode.cpp  MessageNode.h  Node.cpp  Node.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  RootGraph.cpp  RootGraph.h  SimpleTaskNode.cpp  SimpleTaskNode.h  (+10 more)
